@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<!DOCTYPE node
-    PUBLIC "-//freedesktop//DTD D-BUS Object Introspection 1.0//EN"
-    "http://www.freedesktop.org/standards/dbus/1.0/introspect.dtd">
+<!DOCTYPE node PUBLIC
+  "-//freedesktop//DTD D-BUS Object Introspection 1.0//EN"
+  "http://www.freedesktop.org/standards/dbus/1.0/introspect.dtd">
 
 <node name="/com/ubuntu/Upstart">
   <interface name="com.ubuntu.Upstart">
+    <method name="GetJobByName">
+      <arg name="name" type="s" direction="in" />
+      <arg name="job" type="o" direction="out" />
+    </method>
   </interface>
 </node>
